objects/AccountSolution__c.object
<CustomObject>
    <description>Account Solutions is a custom object used to record and manage user-inputted records for Account-specific Solutions in the Account Planning process.</description>
    <fields>
        <fullName>AccountLU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Strategic Opportunities</relationshipLabel>
        <relationshipName>Strategic_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>The Account Plan linked to this Account Solution record.</description>
        <inlineHelpText>The Account Plan linked to this Account Solution record.</inlineHelpText>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipName>Account_Solutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>The Account linked to the parent Account Plan for this Account Solution.</description>
        <formula>Account_Plan__r.Account__r.Name</formula>
        <inlineHelpText>The Account linked to the parent Account Plan for this Account Solution.</inlineHelpText>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business Objective</description>
        <label>Business Objective</label>
        <referenceTo>AccountObjective__c</referenceTo>
        <relationshipLabel>Strategic Opportunities</relationshipLabel>
        <relationshipName>Strategic_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A detailed description of the Account Solution from the point of view of your Company.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A detailed description of the Account Solution from the point of view of your Company.</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>A detailed description of the impact that the Account Solution has on your your customer.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A detailed description of the impact that the Account Solution has on your your customer.</inlineHelpText>
        <label>Impact</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Solution record linked to this Account Solution record.</description>
        <inlineHelpText>The Solution record linked to this Account Solution record.</inlineHelpText>
        <label>Solution Library</label>
        <referenceTo>SalesSolution__c</referenceTo>
        <relationshipName>Account_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Strategic Opportunity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Strategic Opportunity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategic Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>